# c-suite-ai

./: .gitignore  BUILD_SPEC.md  CLAUDE.md  DEV_JOURNAL.md  README.md  RUNPOD_SETUP.md  main.py  pyproject.toml  run_tests.ps1  run_tests.sh  start.sh  test_pipeline.py
.claude/: settings.local.json
backend/: __init__.py  client.py  config.py  council.py  main.py  storage.py
data/: council_config.example.json
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChairmanPicker.jsx  ChatInterface.css  ChatInterface.jsx  CouncilPicker.css  CouncilPicker.jsx  LoginScreen.css  LoginScreen.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.jsx  SummarizationPicker.jsx  WakeUpButton.css  WakeUpButton.jsx
frontend/src/utils/: costEstimate.js
tests/: test_config.py  test_pipeline.py  test_ranking.py
