[project]
name = "c-suite-ai"
version = "1.2.1"
description = "C-Suite AI — Multi-model AI council debate platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    "slowapi>=0.1.9",
    "PyJWT>=2.8.0",
]
